--- a/argocd/projects/chatapp-project.yaml
+++ b/argocd/projects/chatapp-project.yaml
@@ -94,6 +94,10 @@ spec:
       kind: ServiceMonitor
     - group: 'monitoring.coreos.com'
       kind: PodMonitor
+    
+    # Secrets Management
+    - group: 'secrets-store.csi.x-k8s.io'
+      kind: SecretProviderClass
   
   # =========================================
   # Roles (RBAC for project)
