--- a/argocd/applications/chatapp-dev.yaml
+++ b/argocd/applications/chatapp-dev.yaml
@@ -26,7 +26,7 @@ spec:
     
     # Helm configuration
     helm:
-      releaseName: chatapp-dev
+      releaseName: chatapp  # Keep resource names consistent (chatapp-backend, not chatapp-dev-backend)
       valueFiles:
         - ../dev/values.yaml  # Dev-specific values
   
