Fix release names for staging and prod

--- a/argocd/applications/chatapp-prod.yaml
+++ b/argocd/applications/chatapp-prod.yaml
@@ -18,7 +18,7 @@ spec:
     
     # Helm configuration
     helm:
-      releaseName: chatapp-prod
+      releaseName: chatapp
       valueFiles:
         - ../prod/values.yaml  # Prod-specific values
   
